--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.footeris{
+    margin-top: 200px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .icon-styller{
+    display: flex;
+    justify-content: right;
+    margin: 20px;
+  }
+  .header{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    padding: 20px;
+    gap: 10px;
+    align-items: center;
+  }
+  .classsnamefooter{
+    display: flex;
+    gap: 24px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  .menusubscribe{
+    background-color: white;
+    color: black;
+  }
+  .dark-theme {
+    background-color: #333;
+    color: #fff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.light-theme {
+    background-color: #fff;
+    color: #000;
+}
+.slidercarusel{
+    
+    width: 50%;
+    margin-bottom: 38px;
+    
+}
+.divelop{
+    display: flex;
+    justify-content: center;
 }
